Add new animations

--- a/animations/utils/gradients/README
+++ b/animations/utils/gradients/README
@@ -1,3 +1,5 @@
 Gradients borrowed from:
 * gimp (https://www.gimp.org)
 * gradcentral (https://sourceforge.net/projects/gradcentral/)
+* See the world: https://fractal-resources.deviantart.com/art/See-The-World-697070569
+* Teuns pack: http://teundenouden.deviantart.com
